[package]
name = "alakit"
version = "0.2.0"
edition = "2024"
description = "A hybrid desktop application framework combining Rust performance with HTML/CSS flexibility."
license = "MIT OR Apache-2.0"
repository = "https://github.com/fejestibi/alakit"
readme = "../README.md"
keywords = ["desktop", "gui", "webview", "declarative", "security"]
categories = ["gui", "os"]

[dependencies]
aes-gcm = "0.10.3"
alakit_macro = { version = "0.2.0", path = "../alakit_macro" }
inventory = "0.3.22"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tao = "0.34.5"
url = "2.5.8"
wry = "0.54.2"
zeroize = { version = "1.8.1", features = ["derive"] }
region = "3.0.2"
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

