[package]
name = "movie_app"
version = "0.1.0"
edition = "2021"

[dependencies]
alakit = { path = "../alakit" }
alakit_macro = { path = "../alakit_macro" }
rust-embed = "8.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
inventory = "0.3"
